# ghost-julialabs

./: .gitignore  LICENSE  README.md
.github/workflows/: dist.yml
firmware/: CMakeLists.txt  main.c
pcb/: fp-lib-table  ghost.kicad_pcb  ghost.kicad_pro  ghost.kicad_sch
pcb/lib/ghost/: ghost.kicad_mod
